--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,8 @@
 
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-java2ws-plugin</artifactId>				
+				<artifactId>cxf-java2ws-plugin</artifactId>		
+				<version>3.1.5.redhat-630262</version>		
 				<executions>
 					<execution>
 						<id>process-classes</id>
@@ -156,11 +157,13 @@
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.cxf</groupId>
-						<artifactId>cxf-rt-frontend-jaxws</artifactId>				
+						<artifactId>cxf-rt-frontend-jaxws</artifactId>	
+						<version>3.1.5.redhat-630262</version>			
 					</dependency>
 					<dependency>
 						<groupId>org.apache.cxf</groupId>
-						<artifactId>cxf-rt-frontend-simple</artifactId>				
+						<artifactId>cxf-rt-frontend-simple</artifactId>	
+						<version>3.1.5.redhat-630262</version>			
 					</dependency>
 				</dependencies>
 			</plugin>
