--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>${project.artifactId}</finalName>
+		<finalName>${project.artifactId}-${project.version}</finalName>
 
 		<plugins>
 			<plugin>
@@ -128,16 +128,6 @@
 					</execution>
 				</executions>
 			</plugin>
-			
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<configuration>
-					<fork>true</fork>
-					<executable>/usr/lib/jvm/java-1.8.0-openjdk/bin/javac</executable>
-				</configuration>
-			</plugin>
-
 
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
